<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="activate">Activate</string>
    <string name="activate_another_user">This code used by another user</string>
    <string name="activate_block">This code is Blocked</string>
    <string name="activate_code">activate code</string>
    <string name="activate_code_empty">Activate code can not be empty!</string>
    <string name="activate_expired">This username is expired</string>
    <string name="activate_fail">Activate fail</string>
    <string name="activate_invalid">Invalid Username or Password</string>
    <string name="activate_password">Password</string>
    <string name="activate_username">Username</string>
    <string name="activating">Activating...</string>
    <string name="app_name">ROYAL SAT</string>
    <string name="badurl">Request failure, please try again later!</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="cancel">cancel</string>
    <string name="code">Code</string>
    <string name="country_limit">According to the laws and regulations in mainland China cannot use this program.</string>
    <string name="dialog_btn_sure">Sure</string>
    <string name="dialog_title">Message</string>
    <string name="down_apk">download...</string>
    <string name="down_failed">Download failed!</string>
    <string name="down_success">Download success!</string>
    <string name="duration">00:00:00</string>
    <string name="enter">log in</string>
    <string name="exit_application">Press the back button once again, exiting the program!</string>
    <string name="expires">Expires</string>
    <string name="fav_add">Channel Added to Favourite</string>
    <string name="fav_del">Channel Deleted from Favourite</string>
    <string name="get_data_failed">Get channel list failed!</string>
    <string name="has_update_app">There is a new version, please upgrade!</string>
    <string name="jump_to_no">NO</string>
    <string name="jump_to_setting">No networks available, go to setting?</string>
    <string name="jump_to_sure">YES</string>
    <string name="language">Language</string>
    <string name="network_setting_title">NO NETWORK</string>
    <string name="not_online">No available networks, no response from server</string>
    <string name="notplay">Channel can not play, please try again later!</string>
    <string name="package_empty">Package no channels</string>
    <string name="pwd">password</string>
    <string name="pwd_error">Please enter the correct password</string>
    <string name="reset">Reset</string>
    <string name="reset_freagment">Would you like to reset the app</string>
    <string name="reset_label">Reseting Code:</string>
    <string name="sure">sure</string>
    <string name="theme">Theme</string>
    <string name="tips1">Long press channel icon add to favorites or remove from favorites.</string>
    <string name="tips2">Long press channel icon add to favorites.</string>
    <string name="tips3">Long press channel icon remove from favorites.</string>
    <string name="update_freagment">There is new version, please save your code before clicking on yes. your user is:</string>
    <string name="update_label">Updating The Application:</string>
    <string name="version">Version</string>
    <string name="welcome">Welcome activate your Royal Sat</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="btn_jump_dsj">Watch Chinese channels</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder %1$s</string>
    <string name="error_no_decoder">This device does not provide a decoder for %1$s</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for %1$s</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="meta_position">meta_position</string>
    <string name="meta_title">meta_title</string>
    <string name="off">[off]</string>
    <string name="players">Players</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
</resources>
